--- a/source/sites/all/themes/custom/sass/navigation.scss
+++ b/source/sites/all/themes/custom/sass/navigation.scss
@@ -119,7 +119,7 @@ li a.active {
   }
 
   .menu-mlid-537 .sub-menu {
-    left: 460px;
+    left: 446px;
     width: auto;
   }
 
@@ -133,11 +133,14 @@ li a.active {
   }
 
   .menu-mlid-540 .sub-menu {
-    left: 585px;
+    left: 564px;
     width: auto;
   }
+  .menu-mlid-517 .sub-menu{
+    left: 96px;
+  }
 
-  .menu-mlid-633.is-active > a .image {
+  .menu-mlid-633.is-active > a .image{
     background: #533280 !important;
   }
   .menu-mlid-633 > a .image:hover {
