--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -963,6 +963,15 @@ span.field-label {
     .left {
       margin-right: 5%;
     }
+
+    .more-intro {
+      color: #686967;
+      display: block;
+      font-size: 17px;
+      line-height: 20px;
+      text-decoration: none;
+    }
+
   }
 
   #content {
