--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -551,10 +551,10 @@ span.field-label {
     .news {
       background: none repeat scroll 0 0 rgba(138, 132, 128, 0.2);
       height: 75px;
+      margin-top: -6px;
       padding: 25px;
       position: absolute;
-      right: 182px;
-      top: 550px;
+      right: 12.1%;
       width: 450px;
       p {
         color: #726c65;
@@ -738,8 +738,12 @@ span.field-label {
       float: left;
       margin-right: 25px;
       min-height: 370px;
+
+      h1 {
+        margin-top: 10px;
+      }
       
-      a{
+      a {
         text-decoration: none;
         color: $grisClaroTexto;
       }
@@ -1314,6 +1318,15 @@ span.field-label {
         text-align: center;
       }
 
+      .news {
+        background: none repeat scroll 0 0 rgba(138, 132, 128, 0.2);
+        height: 75px;
+        margin-top: 272px;
+        padding: 25px;
+        position: static;
+        width: 88.5%;
+      }
+
     }
   }
 
@@ -1553,6 +1566,15 @@ span.field-label {
       .pictures {
         position: static;
         text-align: center;
+      }
+
+      .news {
+        background: none repeat scroll 0 0 rgba(138, 132, 128, 0.2);
+        height: 75px;
+        margin-top: 272px;
+        padding: 25px;
+        position: static;
+        width: 88.5%;
       }
 
     }
