--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -396,6 +396,12 @@ span.field-label {
         }
       }
 
+      li.like {
+        .cursive {
+          background: none repeat scroll 0 0 rgba(103, 71, 146, 0.2);
+        }
+      }
+
       .phrase {
         width: 20%;
         color: $azul;
@@ -510,7 +516,7 @@ span.field-label {
           color: $blanco;
 
           .more {
-            margin-top: 430px;
+            margin-top: 568px;
           }
         }
       }
@@ -749,6 +755,7 @@ span.field-label {
       }
     }
     .col-1 {
+      margin-top: 16px;
       width: 30%;
     }
     .col-2 {
@@ -759,6 +766,7 @@ span.field-label {
       }
     }
     .col-3 {
+      margin-right: 48px;
       width: 15%;
 
       p {
@@ -766,6 +774,8 @@ span.field-label {
       }
     }
     .col-4 {
+      margin-right: 0;
+      margin-top: 16px;
       width: 30%;
 
       form {
