--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -22,7 +22,7 @@ body {
   letter-spacing: 1px;
 
   background: url(../images/bg.jpg);
-  background-size: 100%;
+  background-size: cover;
 }
 
 p {
